// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> should have two different levels of headings 1`] = `
<div>
  <div
    class="sc-e32628d4-0 eFvDQP"
  >
    <h2
      class="sc-d6e72754-0 egzXkL"
    >
      <span
        class="sc-a4d7a179-0 gGBEJx"
      />
      titre 0
    </h2>
  </div>
  <p>
    paragraphe 0
  </p>
  <div
    class="sc-74e63776-0 gELTXP"
    data-accordion-component="Accordion"
  >
    <div
      id="titre-1"
    >
      <div
        class="sc-1571bed7-0"
        data-accordion-component="AccordionItem"
      >
        <div
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
        >
          <div
            aria-controls="accordion__panel-titre-1"
            aria-disabled="false"
            aria-expanded="false"
            class="sc-1571bed7-2 gNtlHI"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-titre-1"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="sc-93c68677-0 fWneNg"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="sc-1571bed7-3 figaQV"
            >
              <h2
                class="sc-b879fc2d-0 hyiHle"
                style="margin: 0px;"
              >
                titre 1
              </h2>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="sc-1571bed7-1 hamHiw"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-titre-1"
        >
          <div
            class="sc-32c7807-0 iMDCLs"
          >
            <p>
              paragraphe 1-1
            </p>
            <p>
              paragraphe 1-2
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      id="titre-2"
    >
      <div
        class="sc-1571bed7-0 dpEeGj"
        data-accordion-component="AccordionItem"
      >
        <div
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
        >
          <div
            aria-controls="accordion__panel-titre-2"
            aria-disabled="false"
            aria-expanded="false"
            class="sc-1571bed7-2 gNtlHI"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-titre-2"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="sc-93c68677-0 fWneNg"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="sc-1571bed7-3 figaQV"
            >
              <h2
                class="sc-b879fc2d-0 hyiHle"
                style="margin: 0px;"
              >
                titre 2
              </h2>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="sc-1571bed7-1 hamHiw"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-titre-2"
        >
          <div
            class="sc-32c7807-0 iMDCLs"
          >
            <p>
              paragraphe 2-1
            </p>
            <p>
              paragraphe 2-2
            </p>
            <h3
              class="sc-b879fc2d-0 hyiHle"
            >
              titre 2-1
            </h3>
          </div>
        </div>
      </div>
    </div>
    <div
      id="titre-3"
    >
      <div
        class="sc-1571bed7-0 dpEeGj"
        data-accordion-component="AccordionItem"
      >
        <div
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
        >
          <div
            aria-controls="accordion__panel-titre-3"
            aria-disabled="false"
            aria-expanded="false"
            class="sc-1571bed7-2 gNtlHI"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-titre-3"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="sc-93c68677-0 fWneNg"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="sc-1571bed7-3 figaQV"
            >
              <h2
                class="sc-b879fc2d-0 hyiHle"
                style="margin: 0px;"
              >
                titre 3
              </h2>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="sc-1571bed7-1 hamHiw"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-titre-3"
        >
          <div
            class="sc-32c7807-0 iMDCLs"
          >
            <p>
              paragraphe 3-1
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <p>
    paragraphe 4
  </p>
</div>
`;

exports[`<Accordion /> should render all, siblings included 1`] = `
<div>
  <h5
    class="sc-b879fc2d-0 hyiHle"
  >
    titre 0
  </h5>
  <p>
    paragraphe 0
  </p>
  <div
    class="sc-74e63776-0 gELTXP"
    data-accordion-component="Accordion"
  >
    <div
      id="titre-1"
    >
      <div
        class="sc-1571bed7-0"
        data-accordion-component="AccordionItem"
      >
        <div
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
        >
          <div
            aria-controls="accordion__panel-titre-1"
            aria-disabled="false"
            aria-expanded="false"
            class="sc-1571bed7-2 gNtlHI"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-titre-1"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="sc-93c68677-0 fWneNg"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="sc-1571bed7-3 figaQV"
            >
              <h5
                class="sc-b879fc2d-0 hyiHle"
                style="margin: 0px;"
              >
                titre 1
              </h5>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="sc-1571bed7-1 hamHiw"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-titre-1"
        >
          <div
            class="sc-32c7807-0 iMDCLs"
          >
            <p>
              paragraphe 1-1
            </p>
            <p>
              paragraphe 1-2
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      id="titre-2"
    >
      <div
        class="sc-1571bed7-0 dpEeGj"
        data-accordion-component="AccordionItem"
      >
        <div
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
        >
          <div
            aria-controls="accordion__panel-titre-2"
            aria-disabled="false"
            aria-expanded="false"
            class="sc-1571bed7-2 gNtlHI"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-titre-2"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="sc-93c68677-0 fWneNg"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="sc-1571bed7-3 figaQV"
            >
              <h5
                class="sc-b879fc2d-0 hyiHle"
                style="margin: 0px;"
              >
                titre 2
              </h5>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="sc-1571bed7-1 hamHiw"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-titre-2"
        >
          <div
            class="sc-32c7807-0 iMDCLs"
          >
            <p>
              paragraphe 2-1
            </p>
            <p>
              paragraphe 2-2
            </p>
            <h6
              class="sc-b879fc2d-0 hyiHle"
            >
              titre 2-1
            </h6>
          </div>
        </div>
      </div>
    </div>
    <div
      id="titre-3"
    >
      <div
        class="sc-1571bed7-0 dpEeGj"
        data-accordion-component="AccordionItem"
      >
        <div
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
        >
          <div
            aria-controls="accordion__panel-titre-3"
            aria-disabled="false"
            aria-expanded="false"
            class="sc-1571bed7-2 gNtlHI"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-titre-3"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="sc-93c68677-0 fWneNg"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="sc-1571bed7-3 figaQV"
            >
              <h5
                class="sc-b879fc2d-0 hyiHle"
                style="margin: 0px;"
              >
                titre 3
              </h5>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="sc-1571bed7-1 hamHiw"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-titre-3"
        >
          <div
            class="sc-32c7807-0 iMDCLs"
          >
            <p>
              paragraphe 3-1
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <p>
    paragraphe 4
  </p>
</div>
`;
